Fix icons not being round on smaller screens

--- a/static/css/theme.scss
+++ b/static/css/theme.scss
@@ -93,7 +93,7 @@ nav.main-nav {
 }
 
 //Ratios
-.ratio-1-3 {
+.ratio-1-1 {
 	width: 100%;
 	padding-top: 100%;
 	position: relative;
